--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
 <!-- seccion home -->
 <section class="container" id="home">
     <h1>BOOKS, los mejores titulos literarios</h1>
-
+    <a href=https://wa.me/3205212819
+    target="_blank" 
+    rel="noopener noreferrer">
+    <i class="btn btn-danger">compra tu libro</i>
+   </a>
+   <p>Promociones de hallowen en todos los titulos</p>
 
     
 </section>  
