--- a/index.html
+++ b/index.html
@@ -74,8 +74,118 @@
 
 
 </div>
+<!-- seccion novedades  -->
+ <section class= "container" id="novedades">
+    <h2>Novedades</h2>
+    <!-- primero novedad  -->
+    <div class="box">
+
+        <!-- imagnen de la novedad -->
+        <img src="images/ux-ui.png" alt="ux-ui">
+        <!-- titulo de la novedad -->
+        <h3>UX/IU</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptatem possimus sed atque necessitatibus ipsa enim aspernatur, aut nulla perspiciatis expedita consequuntur ab! Vel ipsam dignissimos incidunt neque molestiae vitae?</p>
+
+        
+    </div>
+
+    <!-- segunda  novedad  -->
+    <div class="box">
+
+        <!-- imagnen de la novedad -->
+        <img src="images/web-design.png" alt="WEB DESING">
+        <!-- titulo de la novedad -->
+        <h3>web desing</h3>
+        <!-- descipcion de la novedad -->
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptatem possimus sed atque necessitatibus ipsa enim aspernatur, aut nulla perspiciatis expedita consequuntur ab! Vel ipsam dignissimos incidunt neque molestiae vitae?</p>
+ 
+    </div>
+
+    <div class="box">
+
+        <!-- imagnen de la novedad -->
+        <img src="images/web-development.png" alt="web web-development">
+        <!-- titulo de la novedad -->
+        <h3>web development</h3>
+        <!-- descipcion de la novedad -->
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptatem possimus sed atque necessitatibus ipsa enim aspernatur, aut nulla perspiciatis expedita consequuntur ab! Vel ipsam dignissimos incidunt neque molestiae vitae?</p>
+ 
+    </div>
+    <!-- seccion categoria -->
+    <section class="container" id="categoria">
+        <h2>categoria</h2>
+        <div class="box">
+            <img src="images/categorias/book1.jpg" alt="libro">
+            <h3>literatutura colombiana</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione animi consequuntur iste ipsam ullam illum doloremque beatae! Asperiores, provident quae sint, saepe numquam eum quasi dignissimos culpa, unde ducimus nemo?</p>
+        </div>
+
+    </div>
+    <!-- seccion categoria -->
+    <section class="container" id="categoria">
+        <h2>categoria</h2>
+        <div class="box">
+            <img src="images/categorias/book1.jpg" alt="libro">
+            <h3>literatutura colombiana</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione animi consequuntur iste ipsam ullam illum doloremque beatae! Asperiores, provident quae sint, saepe numquam eum quasi dignissimos culpa, unde ducimus nemo?</p>
+        </div>
+    </div>
+    <!-- seccion categoria -->
+    <section class="container" id="categoria">
+        <h2>categoria</h2>
+        <div class="box">
+            <img src="images/categorias/book1.jpg" alt="libro">
+            <h3>literatutura colombiana</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione animi consequuntur iste ipsam ullam illum doloremque beatae! Asperiores, provident quae sint, saepe numquam eum quasi dignissimos culpa, unde ducimus nemo?</p>
+        </div>
+    </div>
+    <!-- seccion categoria -->
+    <section class="container" id="categoria">
+        <h2>categoria</h2>
+        <div class="box">
+            <img src="images/categorias/book1.jpg" alt="libro">
+            <h3>literatutura colombiana</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione animi consequuntur iste ipsam ullam illum doloremque beatae! Asperiores, provident quae sint, saepe numquam eum quasi dignissimos culpa, unde ducimus nemo?</p>
+        </div> 
+        
 
 
+
+    </section>
+    <!-- seccion contacto -->
+    <section id="contacto">
+        <h2>contacto</h2>
+        <form action="jequintero@hotmail.com" method="post">
+<div>
+
+    <input type="text" placeholder="escrive tu nombre" required>
+<br>
+    <input type="text" placeholder="escrive tu apellido" required>
+    <br>
+    <input type="text" placeholder="escrive tu asunto" required>
+    <br>
+    <input type="email" placeholder="escrive tu correo" required>
+    <br>
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+
+</div>
+<div>
+    <input type="submit" value="enviar" class="btn btn-warning">
+    <input type="submit" value="enviar" class="btn btn-danger">
+</div>
+
+        </form>
+
+    </section>
+
+ </section>       
+<!-- mapa -->
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7932.336599732128!2d-75.58122221859037!3d6.241537597947959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e442852be2722ab%3A0xbc637070e5708c0!2sCalle%20Nueva%2C%20Medell%C3%ADn%2C%20La%20Candelaria%2C%20Medell%C3%ADn%2C%20Antioquia!5e0!3m2!1ses-419!2sco!4v1666310016335!5m2!1ses-419!2sco" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+<!-- footer o pie de pag -->
+<footer class="cover">
+    &copy;2022. booksjg todos los derechos reservados. diseñado: por jessica quintero
+</footer>
 
 
 <!-- javascrip de bootstrap -->
