--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     <a href=https://wa.me/3205212819
     target="_blank" 
     rel="noopener noreferrer">
+    <br>
+    <br>
     <i class="btn btn-danger">compra tu libro</i>
    </a>
    <p>Promociones de hallowen en todos los titulos</p>
@@ -166,12 +168,17 @@
     <br>
     <input type="email" placeholder="escrive tu correo" required>
     <br>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <textarea name="" id="" cols="30" rows="10" placeholder="escribe tus observaciones"></textarea>
 
 </div>
 <div>
-    <input type="submit" value="enviar" class="btn btn-warning">
-    <input type="submit" value="enviar" class="btn btn-danger">
+    
+    <div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+        <button type="reset" class="btn btn-primary">Borrar</button>
+
+    </div>
+
 </div>
 
         </form>
